--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	// create a mesh to render
 	var mesh = new THREE.Mesh( geometry, material );
 	scene.add( mesh );
-	camera.position.z = 800; //1500
+	camera.position.z = 700; //1500
 
 	// handle selecting a file
 	function handleFileSelect(evt) {
@@ -248,8 +248,8 @@
 	tjRender = function(bytes,width,linecount) {
 		if(first) {
 			texture = new THREE.DataTexture(bytes, width, linecount, THREE.AlphaFormat,
-				THREE.UnsignedByteType, THREE.UVMapping, THREE.RepeatWrapping,
-				THREE.RepeatWrapping, THREE.NearestFilter, THREE.NearestFilter, 1);
+				THREE.UnsignedByteType, THREE.UVMapping, THREE.ClampToEdgeWrapping,
+				THREE.ClampToEdgeWrapping, THREE.NearestFilter, THREE.NearestFilter, 1);
 			mesh.material.map = texture;
 			texture.needsUpdate = true;
 			mesh.material.needsUpdate = true;
